exposed filtered sensors
